boton contacto mascotas

--- a/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
@@ -16,7 +16,7 @@
     </p>
     <p class="card__description">{{mascota.edad}} años</p>
     <p class="card__description">{{mascota.descripcion}}</p>
-    <!-- <button [routerLink]="['/detalle-mascota', mascota.id]" type="button" class="btn-naranja">¡Adóptame!</button> -->
+    <button [routerLink]="['/detalle-mascota', mascota.id]" type="button" class="btn-naranja">¡Adóptame!</button>
 
     <div class="favorite-buttons">
   <button class="favorite-btn" >
