--- a/PetHomeAngular/src/app/auth/register/register.component.html
+++ b/PetHomeAngular/src/app/auth/register/register.component.html
@@ -46,6 +46,11 @@
     </div>
 
     @if (registerForm.get('tipoUsuario')?.value === 'protectora') {
+
+      <label for="imagen">Imagen</label>
+  <input id="imagen" type="file" (change)="onFileSelected($event)" />
+  <div class="error" *ngIf="imagenError">Selecciona una imagen válida</div>
+
       <div class="form-group">
         <label for="direccion">Dirección</label>
         <input id="direccion" formControlName="direccion" type="text" class="input" />
