--- a/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
@@ -15,18 +15,17 @@
     
     </p>
     <p class="card__description">{{mascota.edad}} años</p>
-    <p class="card__description">{{mascota.descripcion}}</p>
-    <button [routerLink]="['/detalle-mascota', mascota.id]" type="button" class="btn-naranja">¡Adóptame!</button>
+    <!-- <p class="card__description">{{mascota.descripcion}}</p> -->
+    <!-- <button [routerLink]="['/detalle-mascota', mascota.id]" type="button" class="btn-naranja">¡Adóptame!</button> -->
 
     <div class="favorite-buttons">
-  <button class="favorite-btn" >
-    Adóptame
-  </button>
-  <button class="favorite-btn">
-    ❤️ Añadir a Favoritos
+  <button [routerLink]="['/detalle-mascota', mascota.id]" type="button" class="favorite-btn">¡Adóptame!</button>
+  <button class="favorite-btnn" (click)="addPet(mascota)">
+    ❤️ Añadir a Mis Mascotas
   </button>
 </div>
 
 
   </div>
 </div>
+
