--- a/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
@@ -114,7 +114,7 @@
 
     <div class="radio-wrapper">
       <label class="radio-button">
-        <input name="radio-tamano" type="checkbox" value="Grande"
+        <input class ="radio-input" name="radio-tamano" type="checkbox" value="Grande"
                (change)="onCheckboxChange($event, 'tamano')">
         <span class="radio-label">Grande</span>
       </label>
