--- a/PetHomeAngular/src/app/foot/foot.component.html
+++ b/PetHomeAngular/src/app/foot/foot.component.html
@@ -5,29 +5,9 @@
 
                 <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
                     style="width: 150px; height: 150px;">
-                    <img src="https://mdbootstrap.com/img/Photos/new-templates/animal-shelter/logo.png" height="70"
+                    <img src="/assets/img/pethome1.svg" height="70"
                         alt="Foto Mascotas" />
                 </div>
-
-                <p class="text-center">Adopta una mascota, cambia una vida</p>
-
-                <ul class="list-unstyled d-flex flex-row justify-content-center">
-                    <li>
-                        <a class="text-dark px-2" href="#!">
-                            <i class="fab fa-facebook-square"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="text-dark px-2" href="#!">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="text-dark ps-2" href="#!">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </li>
-                </ul>
 
             </div>
 
