--- a/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/adopta.component.html
@@ -65,7 +65,7 @@
         <div class="radio-container">
           <div class="radio-wrapper">
             <label class="radio-button">
-              <input  name="radio-especie" type="checkbox" value="Perro"
+              <input  class ="radio-input" name="radio-especie" type="checkbox" value="Perro"
                      (change)="onCheckboxChange($event, 'especie')">
               <span class="radio-label">Perro</span>
             </label>
@@ -73,7 +73,7 @@
           
           <div class="radio-wrapper">
             <label class="radio-button">
-              <input id="option2" name="radio-especie" type="checkbox" value="Gato"
+              <input class ="radio-input" id="option2" name="radio-especie" type="checkbox" value="Gato"
                      (change)="onCheckboxChange($event, 'especie')">
               <span class="radio-label">Gato</span>
             </label>
@@ -81,7 +81,7 @@
           
           <div class="radio-wrapper">
             <label class="radio-button">
-              <input id="option3" name="radio-especie" type="checkbox" value="Otro"
+              <input class ="radio-input" id="option3" name="radio-especie" type="checkbox" value="Otro"
                      (change)="onCheckboxChange($event, 'especie')">
               <span class="radio-label">Otro</span>
             </label>
@@ -98,7 +98,7 @@
   <div class="radio-container">
     <div class="radio-wrapper">
       <label class="radio-button">
-        <input name="radio-tamano" type="checkbox" value="Pequeño"
+        <input class ="radio-input" name="radio-tamano" type="checkbox" value="Pequeño"
                (change)="onCheckboxChange($event, 'tamano')">
         <span class="radio-label">Pequeño</span>
       </label>
@@ -106,7 +106,7 @@
 
     <div class="radio-wrapper">
       <label class="radio-button">
-        <input name="radio-tamano" type="checkbox" value="Mediano"
+        <input class ="radio-input" name="radio-tamano" type="checkbox" value="Mediano"
                (change)="onCheckboxChange($event, 'tamano')">
         <span class="radio-label">Mediano</span>
       </label>
@@ -128,7 +128,7 @@
   <div class="radio-container">
     <div class="radio-wrapper">
       <label class="radio-button">
-        <input name="radio-tamano" type="checkbox" value="Macho"
+        <input class ="radio-input" name="radio-tamano" type="checkbox" value="Macho"
                (change)="onCheckboxChange($event, 'genero')">
         <span class="radio-label">Macho</span>
       </label>
@@ -136,7 +136,7 @@
 
     <div class="radio-wrapper">
       <label class="radio-button">
-        <input name="radio-tamano" type="checkbox" value="Hembra"
+        <input  class ="radio-input"name="radio-tamano" type="checkbox" value="Hembra"
                (change)="onCheckboxChange($event, 'genero')">
         <span class="radio-label">Hembra</span>
       </label>
