--- a/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
+++ b/PetHomeAngular/src/app/secciones/adopta/mascota-card/mascota-card.component.html
@@ -15,14 +15,14 @@
     
     </p>
     <p class="card__description">{{mascota.edad}} años</p>
-    <!-- <p class="card__description">{{mascota.descripcion}}</p> -->
+    <p class="card__description">{{mascota.descripcion}}</p>
     <!-- <button [routerLink]="['/detalle-mascota', mascota.id]" type="button" class="btn-naranja">¡Adóptame!</button> -->
 
     <div class="favorite-buttons">
   <button [routerLink]="['/detalle-mascota', mascota.id]" type="button" class="favorite-btn">¡Adóptame!</button>
-  <button class="favorite-btnn" (click)="addPet(mascota)">
+  <!-- <button class="favorite-btnn" (click)="addPet(mascota)">
     ❤️ Añadir a Mis Mascotas
-  </button>
+  </button> -->
 </div>
 
 
