--- a/PetHomeAngular/src/app/secciones/mascota-detalle/mascota-detalle.component.html
+++ b/PetHomeAngular/src/app/secciones/mascota-detalle/mascota-detalle.component.html
@@ -94,7 +94,7 @@
 </div>
 
 
-<div class="tarjeta-mascota">
+<div class="tarjeta-mascota d-flex flex-column align-items-center">
   <h4>Otras mascotas de la protectora {{ mascota.protectora.nombre }}</h4>
   <div class="row g-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
             @for (mascota of mascotas.slice(-3); track $index) {
