--- a/PetHomeAngular/src/app/secciones/inicio/inicio.component.html
+++ b/PetHomeAngular/src/app/secciones/inicio/inicio.component.html
@@ -70,7 +70,7 @@
   <div class="container">
     <h2 class="text-center mb-5">Descubre las mascotas que más tiempo están con nosotros</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-      @for (mascota of mascotas.slice(-6); track mascota.id) {
+      @for (mascota of getMascotas().slice(-6); track mascota.id) {
         <div class="col d-flex justify-content-center">
           <app-mascota-card [mascota]="mascota" />
         </div>
