--- a/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
+++ b/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
@@ -13,7 +13,7 @@
         @if(isLoggedIn) {
          
           <a class="nav-link">
-              {{ tipoUsuario }}: {{ nombreUsuario }}
+            {{ nombreUsuario }}
           </a>
          
          @if(tipoUsuario === 'protectora') {
