Tipo de letra final

--- a/PetHomeAngular/src/app/secciones/inicio/inicio.component.html
+++ b/PetHomeAngular/src/app/secciones/inicio/inicio.component.html
@@ -43,7 +43,7 @@
 
 <section class="adopcion-section py-5">
   <div class="container">
-    <h2 class="text-center mb-5">Descubre las mascotas que más tiempo están con nosotros</h2>
+    <h2 class="text-center mb-5">¡Ellos aún no han tenido suerte!</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
       @for (mascota of getMascotas().slice(-6); track mascota.id) {
         <div class="col d-flex justify-content-center">
