--- a/PetHomeAngular/src/app/secciones/organizaciones-detalle/organizaciones-detalle.component.html
+++ b/PetHomeAngular/src/app/secciones/organizaciones-detalle/organizaciones-detalle.component.html
@@ -6,10 +6,10 @@
       <div class="col-md-3 text-center text-md-start">
         <img [src]="backendUrl + org?.imagen" alt="Foto organización" class="img-fluid rounded-circle mb-2"
           style="width: 100px; height: 100px;">
-        <h5 class="org-title">{{ org.nombre }}</h5>
+        <h5 class="org-title">{{ org?.nombre }}</h5>
         <p class="org-text">
           <i class="bi bi-building org-icon"></i>
-          {{ org.descripcion }}
+          {{ org?.descripcion }}
         </p>
       </div>
 
