--- a/PetHomeAngular/src/app/foot/foot.component.html
+++ b/PetHomeAngular/src/app/foot/foot.component.html
@@ -1,14 +1,12 @@
-<footer class="bg-light text-center text-lg-start text-dark">
+<footer class="bg-light text-center text-lg-start text-dark" style="font-size: 1.2rem;">
     <div class="container p-4">
         <div class="row my-4">
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
 
                 <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
                     style="width: 150px; height: 150px;">
-                    <img src="/assets/img/pethome1.svg" height="70"
-                        alt="Foto Mascotas" />
+                    <img src="/assets/img/pethome1.svg" height="70" alt="Foto Mascotas" />
                 </div>
-
             </div>
 
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
@@ -56,9 +54,8 @@
         <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noopener noreferrer">
             Creative Commons Atribución/Reconocimiento-CompartirIgual 4.0 Internacional
         </a>.
-        <img src="/assets/img/CC_BY-SA_icon.png" alt="Licencia Creative Commons BY-SA 4.0"
-        width="80">
+        <img src="/assets/img/CC_BY-SA_icon.png" alt="Licencia Creative Commons BY-SA 4.0" width="80">
     </p>
-    
+
 
 </footer>
