--- a/PetHomeAngular/src/app/secciones/aviso-legal/aviso-legal.component.html
+++ b/PetHomeAngular/src/app/secciones/aviso-legal/aviso-legal.component.html
@@ -21,15 +21,7 @@
                             <span class="blanc-space ng-binding">José Tomás Gallego</span>, con NIF: <span
                                 class="blanc-space ng-binding">11111111X</span>, y cuyos datos de contacto son:
                         </p>
-                        <p ng-show="data.claseTitular == 'empresa'" class="ng-hide">La titularidad de este sitio web,
-                            <span class="blanc-space ng-binding">http://pet-home.org/</span>, (en adelante, Sitio Web)
-                            la ostenta:
-                            <span class="blanc-space ng-binding"></span>, provista de NIF: <span
-                                class="blanc-space ng-binding"></span> e inscrita en: <span
-                                class="blanc-space ng-binding"></span> con los siguientes datos registrales: <span
-                                class="blanc-space ng-binding"></span>, cuyo representante es: <span
-                                class="blanc-space ng-binding"></span>, y cuyos datos de contacto son:
-                        </p>
+
                         <p>Dirección: <span class="blanc-space ng-binding">C. Maestro Pedro Perez Abadia, 2A, 30100
                                 Murcia</span></p>
                         <p>Teléfono de contacto: <span class="blanc-space ng-binding">+34 666 999 111</span></p>
@@ -304,7 +296,8 @@
                             embargo,
                             no podrá suprimir, alterar, o manipular cualquier dispositivo de protección o sistema de
                             seguridad
-                            que estuviera instalado en el Sitio Web.</p>
+                            que estuviera instalado en el Sitio Web.
+                        </p>
                         <p>En caso de que el Usuario o tercero considere que cualquiera de los Contenidos del Sitio Web
                             suponga
                             una violación de los derechos de protección de la propiedad intelectual, deberá comunicarlo
