--- a/PetHomeAngular/src/app/secciones/page404/page404.component.html
+++ b/PetHomeAngular/src/app/secciones/page404/page404.component.html
@@ -1,1 +1,13 @@
-<p>page404 works!</p>
+<div class="container mt-5 mb-5 adopta-container">
+    <div class="card p-4 shadow-lg">
+        <div class="row">
+            <div class="full-height-center">
+                <div>
+                    <div class="error-code">404</div>
+                    <p class="error-message">Ups... Esta página no existe</p>
+                    <a href="/inicio" class="btn btn-orange">Volver al inicio</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
