--- a/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
+++ b/PetHomeAngular/src/app/nav-menu/nav-menu.component.html
@@ -5,14 +5,14 @@
       <input type="radio" name="slider" id="close-btn">
       <ul class="nav-links">
         <label for="close-btn" class="menu-toggle"><img src="assets/img/close-btn.png" alt=""></label>
-        <li><a class="nav-link active" aria-current="page" routerLink="/inicio" routerLinkActive="fw-bold">Inicio</a></li>
-        <li><a class="nav-link" routerLink="/adopta" routerLinkActive="fw-bold">Adopta</a></li>
-        <li><a class="nav-link" routerLink="/organizaciones" routerLinkActive="fw-bold">Organizaciones</a></li>
-        <li><a class="nav-link" routerLink="/sobre-nosotros" routerLinkActive="fw-bold">Sobre Nosotros</a></li>
+        <li><a class="nav-link active" aria-current="page" routerLink="/inicio" routerLinkActive="fw-bold" (click)="cerrarMenu()">Inicio</a></li>
+        <li><a class="nav-link" routerLink="/adopta" routerLinkActive="fw-bold" (click)="cerrarMenu()">Adopta</a></li>
+        <li><a class="nav-link" routerLink="/organizaciones" routerLinkActive="fw-bold" (click)="cerrarMenu()">Organizaciones</a></li>
+        <li><a class="nav-link" routerLink="/sobre-nosotros" routerLinkActive="fw-bold" (click)="cerrarMenu()">Sobre Nosotros</a></li>
         
         @if(isLoggedIn) {
          
-          <a class="nav-link">
+          <a class="nav-link-usuario">
             {{ nombreUsuario }}
           </a>
          
@@ -24,12 +24,12 @@
           <li><button  routerLink="/login" routerLinkActive="fw-bold" (click)="logout()" class="button"><p class="text">Cerrar Sesión</p></button></li>
         }@else {
           <li>
-            <button  routerLink="/login" routerLinkActive="fw-bold" class="button-inicio">
+            <button  routerLink="/login" routerLinkActive="fw-bold" class="button-inicio" (click)="cerrarMenu()">
               <p>Iniciar Sesión</p>
             </button>
           </li>
           <li>
-            <button routerLink="/register" class="button">
+            <button routerLink="/register" class="button" (click)="cerrarMenu()">
               <p>Regístrate ya</p>
             </button>
           </li>
