--- a/PetHomeAngular/src/app/auth/register/register.component.html
+++ b/PetHomeAngular/src/app/auth/register/register.component.html
@@ -45,33 +45,37 @@
     </div>
 
     @if (registerForm.get('tipoUsuario')?.value === 'protectora') {
-      <div class="form-group-img">
+    <div class="form-group-img">
       <label for="imagen">Imagen</label>
       <input id="imagen" type="file" (change)="onFileSelected($event)" />
       <div class="error" *ngIf="imagenError">* Selecciona una imagen válida</div>
-      </div>
-      
-      <div class="form-group">
-        <label for="direccion">Dirección</label>
-        <input id="direccion" formControlName="direccion" type="text" class="input" />
-        <div class="error" *ngIf="isInvalid('direccion')">* Este campo es obligatorio</div>
-      </div>
+    </div>
 
-      <div class="form-group">
-        <label for="provincia">Localidad</label>
-        <input id="provincia" formControlName="provincia" type="text" class="input" />
-        <div class="error" *ngIf="isInvalid('provincia')">* Este campo es obligatorio</div>
-      </div>
+    <div class="form-group">
+      <label for="direccion">Dirección</label>
+      <input id="direccion" formControlName="direccion" type="text" class="input" />
+      <div class="error" *ngIf="isInvalid('direccion')">* Este campo es obligatorio</div>
+    </div>
 
-      <div class="form-group">
-        <label for="descripcion">Descripción</label>
-        <input id="descripcion" formControlName="descripcion" type="text" class="input" />
-        <div class="error" *ngIf="isInvalid('descripcion')">* Este campo es obligatorio</div>
-      </div>
+    <div class="form-group">
+      <label for="provincia">Localidad</label>
+      <input id="provincia" formControlName="provincia" type="text" class="input" />
+      <div class="error" *ngIf="isInvalid('provincia')">* Este campo es obligatorio</div>
+    </div>
+
+    <div class="form-group">
+      <label for="descripcion">Descripción</label>
+      <input id="descripcion" formControlName="descripcion" type="text" class="input" />
+      <div class="error" *ngIf="isInvalid('descripcion')">* Este campo es obligatorio</div>
+    </div>
     }
 
 
-    <button class="submit" type="submit" [disabled]="!registerForm.valid">Registrarme</button>
+    <button class="submit" type="submit" [attr.aria-disabled]="!registerForm.valid" [disabled]="false"
+      (click)="registerForm.valid && onSubmit()">
+      Registrarme
+    </button>
+
     <p class="signin">
       ¿Ya tienes una cuenta? <a [routerLink]="['/login']">Iniciar sesión</a>
     </p>
